# Skald

./: .CMakeLists.txt.swp  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README  README.md
src/: Component.hpp  Components.hpp  EntityManager.hpp  Error.hpp  System.hpp  SystemManager.cpp  SystemManager.hpp  VectorTuple.hpp  World.hpp  vectorTuple.hpp
test/: entityTests.cpp  runAllTests.cpp  systemTests.cpp  tests_shared.hpp  vectorTupleTests.cpp  worldTests.cpp
